--- a/examples/README
+++ b/examples/README
@@ -9,6 +9,7 @@
    playground to come back to later, when you want to try playing with advanced
    concepts in a simple environment.
 
+   [→ have a look!](miniexample/README)
 
 ## Phonelist
 
@@ -17,17 +18,21 @@
    files is added to the workflow and you can explore the `groupby` concept of
    Jinja templates.
 
+   [→ have a look!](Phonelist/README)
 
 ## IT-inventory
 
    A very complex dataset with an example template producing different overview
    tables. Why should difficult things look difficult?
 
+   [→ have a look!](IT-inventory/README)
 
 ## Juser-authors
 
    Having all data in a single file quickly becomes quite complex to manage,
    especially when reusing data for different reports. In this example you can
-   see how to include data from an web database. Data from different files is
+   see how to include data from a web database. Data from different files is
    combined and two reports are generated from the combination.
+
+   [→ have a look!](Juser-authors/README)
 
